--- a/css/cards.css
+++ b/css/cards.css
@@ -82,6 +82,7 @@
 }
 .news_card .cta_btn {
   background-color: var(--color-cta-newscard-bg);
+  border: none;
 }
 .news_card:nth-of-type(2n) .cta_btn {
   background-color: var(--color-cta-newscard-bg-inverted);
@@ -90,4 +91,86 @@
 .cta_btn:after {
   content: "\2192";
   margin-left: 1rem;
+}
+
+[popover] {
+  margin: auto;
+  padding: 1rem;
+
+  button {
+    position: sticky;
+    top: 0;
+    justify-self: end;
+  }
+
+  &:popover-open {
+    display: grid;
+  }
+
+  &::backdrop {
+    background: #0008;
+  }
+}
+[popover] {
+  max-height: 90vh;
+  max-width: 50ch;
+  width: 90vw;
+}
+.close_popover {
+  border: none;
+  scale: 2;
+}
+
+[popover] {
+  opacity: 0;
+  transition: 300ms allow-discrete;
+}
+
+:popover-open {
+  opacity: 1;
+  rotate: none;
+}
+@starting-style {
+  :popover-open {
+    opacity: 0;
+  }
+}
+::backdrop {
+  opacity: 0;
+  transition: 300ms allow-discrete;
+  background: #0008;
+}
+
+::backdrop {
+  opacity: 0;
+  transition: 0.5s allow-discrete;
+  background: #0008;
+  backdrop-filter: blur(5px);
+}
+
+:popover-open::backdrop {
+  opacity: 1;
+  backdrop-filter: blur(5px);
+}
+
+@starting-style {
+  :popover-open::backdrop {
+    opacity: 0;
+    backdrop-filter: blur(5px);
+  }
+}
+.news_card_text {
+  margin-top: 1.5em;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1em;
+}
+.text_popup {
+  display: grid;
+  grid-area: 2;
+}
+.close_popover {
+  background-color: #6f90eb;
+  color: white;
+  padding: 0 0.2em;
 }
